# flix-api

./: README.md  pyproject.toml
actors/: admin.py  models.py  urls.py  views.py
actors/migrations/: 0001_initial.py
app/: settings.py  urls.py
authentication/: urls.py
core/: settings.py  urls.py
genres/: admin.py  urls.py  views.py
genres/migrations/: 0001_initial.py
movies/: serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reviews/: models.py  serializers.py  urls.py
reviews/migrations/: 0001_initial.py
