[tool.poetry]
name = "flix-api"
version = "0.1.0"
description = "Catálogo de filmes para aplicar conhecimentos adquiridos no curso Django Master"
authors = ["Deyved Antonio <deyved.antonio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-filter = "^25.1"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.6.7"
mkdocstrings = "^0.28.2"
mkdocstrings-python = "^1.16.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
blue = "^0.9.1"
isort = "^6.0.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
